--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xgplayer": "^2.9.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
